# champss_software

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  move_all_repos_to_uv.sh  pyproject.toml  todo-perf.md  todo-pipeline.md  todo-ps_inject.md  update_all_uv_locks.sh
.github/workflows/: continuous-deployment.yml  continuous-integration.yml
2025/01/23/100.14_-9.14/: 100.14_-9.14_0_obs_id.txt
champss/FFA/: __init__.py  follow_up.sh  pyproject.toml  sps_config_Laurent.yml
champss/FFA/FFA/: FFA_cli.py  FFA_search.py  clustering_FFA.py  feature_generator_FFA.py  interfaces_FFA.py  single_pointing_FFA.py
champss/FFA/standalone_tools/: FFA_search_CHIMEPulsar.py  ffa_pulsar_list_command.sh  follow_up.py  multiday_search.sh
champss/beamformer/: pyproject.toml
champss/beamformer/beamformer/: __init__.py  skybeam.py
champss/beamformer/beamformer/data/: NE2025_map.npy
champss/beamformer/beamformer/strategist/: mapper.py  strategist.py
champss/beamformer/beamformer/utilities/: common.py  dm.py  msg2fil_beamformed.py
champss/beamformer/scripts/: create_incoherent_beam.py
champss/beamformer/tests/: test_dm_map.py
champss/candidate-processor/: pyproject.toml
champss/controller/: README.md  pyproject.toml
champss/controller/controller/: __init__.py  rpc_client.py  updater.py
champss/controller/scheduling/: scheduleknownpulsars.py
champss/folding/: pyproject.toml
champss/folding/folding/: archive_utils.py  create_ephemerides_from_db.py  filter_mpcandidates.py  fold.py  fold_candidate.py  fold_pulsar.py  known_source_matching.py  localize.py  plot_aliases.py  plot_candidate.py
champss/folding/folding/utilities/: alias.py  database.py  utils.py
champss/folding/foldutils/: add_tzpar_fsdb.py
champss/folding/misc/: localize.py
champss/folding/multiday_search/: confirm_cand.py  fold_multiday.py  load_profiles.py  multidayfold_pipeline.py  phase_aligned_search.py  summary_plot.py
champss/folding/timing/: add_timing_source.py
champss/multi-pointing/: pyproject.toml
champss/multi-pointing/sps_multi_pointing/: data_reader.py  grouper.py  harmonic_clusterer.py  mp_pipeline.py  sps_config.yml
champss/multi-pointing/sps_multi_pointing/known_source_sifter/: add_tzpar_sources.py  known_source_convert.py  known_source_filters.py  known_source_sifter.py  write_psrcat_to_ksdb.py  write_psrscraper_to_ksdb.py
champss/ps-processes/: pyproject.toml
champss/ps-processes/ps_processes/: ps_pipeline.py
champss/ps-processes/ps_processes/processes/: atnf_freqs.txt  clustering.py  ps.py  ps_inject.py  ps_search.py  ps_stack.py
champss/rfi-mitigation/: pyproject.toml
champss/rfi-mitigation/rfi_mitigation/: conversion.py  pipeline.py  reader.py
champss/rfi-mitigation/rfi_mitigation/cleaners/: cleaners.py  periodic.py
champss/rfi-mitigation/rfi_mitigation/data/: birdies.yaml
champss/rfi-mitigation/rfi_mitigation/utilities/: cleaner_utils.py
champss/scheduler/: pyproject.toml
champss/scheduler/scheduler/: workflow.py
champss/sps-common/: pyproject.toml
champss/sps-common/sps_common/: barycenter.py  conversion.py  filterbank.py  plotting.py
champss/sps-common/sps_common/interfaces/: beamformer.py  multi_pointing.py  plot_rednoise.py  ps_processes.py  rednoise_diagnostics.py  single_pointing.py  utilities.py
champss/sps-databases/: README.md  pyproject.toml
champss/sps-databases/sps_databases/: db_api.py  db_utils.py  models.py
champss/sps-databases/sps_databases/utilities/: populate_db.py
champss/sps-dedispersion/: pyproject.toml
champss/sps-dedispersion/sps_dedispersion/: dedisperse.py
champss/sps-pipeline/: pyproject.toml
champss/sps-pipeline/pipeline-scripts/: run-benchmark.sh  run_rednoise_benchmark.py
champss/sps-pipeline/sps_pipeline/: beamform.py  candidate_viewer.py  candidate_viewer_ks_database_integration.py  cands.py  cleanup.py  config_utils.py  create_quality_report.py  dedisp.py  ffa.py  file_pipeline.py  pipeline.py  processing.py  ps_cumul_stack.py  sps_config.yml  stack_scheduling.py  utils.py
