[project]
name = "champss"
version = "0.13.0"
description = "CHAMPSS Codebase"
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = "GPL-3.0-only"
dependencies = [
    "beamformer",
    "candidate-processor",
    "controller",
    "dmt",
    "folding",
    "ps-processes",
    "rfi-mitigation",
    "scheduler",
    "spshuff",
    "sps-common",
    "sps-databases",
    "sps-dedispersion",
    "sps-multi-pointing",
    "sps_pipeline",
]

[project.optional-dependencies]
beam-model = ["beam-model"]

[dependency-groups]
dev = [
    "commitizen>=3.4.0,<4",
    "mypy>=1.4.0,<2",
    "pre-commit>=3.3.3,<4",
    "pytest>=7.3.2,<8",
]

[tool.uv]

[tool.uv.sources]
beamformer = { path = "./champss/beamformer", editable = true }
beam-model = { git = "git+ssh://git@github.com/CHIMEFRB/beam-model.git"}
candidate-processor = { path = "./champss/candidate-processor", editable = true }
controller = { path = "./champss/controller", editable = true }
dmt = { git = "https://github.com/chime-sps/dmt.git" }
folding = { path = "./champss/folding", editable = true }
ps-processes = { path = "./champss/ps-processes", editable = true }
rfi-mitigation = { path = "./champss/rfi-mitigation", editable = true }
scheduler = { path = "./champss/scheduler", editable = true }
spshuff = { path = "./champss/spshuff", editable = true }
sps-common = { path = "./champss/sps-common", editable = true }
sps-databases = { path = "./champss/sps-databases", editable = true }
sps-dedispersion = { path = "./champss/sps-dedispersion", editable = true }
sps-multi-pointing = { path = "./champss/multi-pointing", editable = true }
sps_pipeline = { path = "./champss/sps-pipeline", editable = true }

[tool.hatch.build.targets.sdist]
exclude = ["tests"]

[tool.hatch.build.targets.wheel]
exclude = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

