[tool.poetry]
name = "champss"
version = "0.14.0"
description = "CHAMPSS Codebase"
authors = ["CHAMPSS <chime_spawg@physics.mcgill.>"]
license = "GPLv3"
readme = "README.md"
exclude = [
    "tests"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
beamformer = {path = "./champss/beamformer", develop=true}
candidate-processor = {path = "./champss/candidate-processor", develop=true}
controller = {path = "./champss/controller", develop=true}
dmt = {git = "https://github.com/chime-sps/dmt.git", rev = "raw_init"}
folding = {path = "./champss/folding", develop=true}
ps-processes = {path = "./champss/ps-processes", develop=true}
rfi-mitigation = {path = "./champss/rfi-mitigation", develop=true}
scheduler = {path = "./champss/scheduler", develop=true}
spshuff = {path = "./champss/spshuff", develop=true}
sps-common = {path = "./champss/sps-common", develop=true}
sps-databases = {path = "./champss/sps-databases", develop=true}
sps-dedispersion = {path = "./champss/sps-dedispersion", develop=true}
sps-multi-pointing = {path = "./champss/multi-pointing", develop=true}
sps_pipeline = {path = "./champss/sps-pipeline", develop=true}
cfbm = {git = "https://github.com/chime-sps/chime-frb-beam-model"}

[tool.poetry.group.dev.dependencies]
commitizen = "^3.4.0"
mypy = "^1.4.0"
pre-commit = "^3.3.3"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

