[tool.poetry]
name = "FFA"
version = "0.1.0"
description = "Fast Folding Algorithm (FFA) search for CHIME SPS"
authors = ["CHIME SPS <chime_spawg@physics.mcgill.ca>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24"
scipy = "^1.10"
riptide-ffa = "^0.2.5"
sps-common = {path = "../sps-common", develop=true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
