[project]
name = "beamformer"
version = "1.2.0"
description = "CHIME SPS Beamformer"

requires-python = ">=3.10,<3.12"
readme = "README.md"
license = "GPL-3.0-only"
dependencies = [
    "rfi-mitigation",
    "spshuff",
    "sps-common",
    "sps-databases",
    "astropy>=6.1,<6.2",
    "attrs>=22.2.0,<23",
    "numpy>=1.24.3,<2",
    "prometheus-client>=0.17.1,<0.18",
    "pytz~=2023.3",
    "scipy>=1.10.1,<2",
    "ephem~=4.0",
]

[dependency-groups]
dev = [
    "commitizen>=3.4.0,<4",
    "mypy>=1.4.0,<2",
    "pre-commit>=3.3.3,<4",
    "pytest>=7.3.2,<8",
]

[tool.uv]

[tool.uv.sources]
rfi-mitigation = { path = "../rfi-mitigation", editable = true }
spshuff = { path = "../spshuff", editable = true }
sps-common = { path = "../sps-common", editable = true }
sps-databases = { path = "../sps-databases", editable = true }

[tool.hatch.build.targets.sdist]
exclude = ["tests"]

[tool.hatch.build.targets.wheel]
exclude = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
