[tool.poetry]
name = "candidate-processor"
version = "0.1.1"
description = "CHIME SPS H-Hat Arrays/Power Spectrum Candidate Processor"
authors = ["CHIME SPS <chime_spawg@physics.mcgill.>"]
license = "MIT"
readme = "README.md"
exclude = [
    "tests"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
sps-common = {path = "../sps-common", develop=true}
sps-databases = {path = "../sps-databases", develop=true}
matplotlib = "^3.7.1"
numpy = "^1.24.3"
pandas = "^2.0.3"
pyyaml = "^6.0"
scikit-learn = "^1.3.0"
scipy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.4.0"
mypy = "^1.4.0"
pre-commit = "^3.3.3"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
