[project]
name = "candidate-processor"
version = "0.1.1"
description = "CHIME SPS H-Hat Arrays/Power Spectrum Candidate Processor"
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = "GPL-3.0-only"
dependencies = [
    "sps-common",
    "sps-databases",
    "matplotlib>=3.7.1,<4",
    "numpy>=1.24.3,<2",
    "pandas>=2.0.3,<3",
    "pyyaml~=6.0",
    "scikit-learn>=1.3.0,<2",
    "scipy>=1.10.1,<2",
]

[dependency-groups]
dev = [
    "commitizen>=3.4.0,<4",
    "mypy>=1.4.0,<2",
    "pre-commit>=3.3.3,<4",
    "pytest>=7.3.2,<8",
]

[tool.uv]

[tool.uv.sources]
sps-common = { path = "../sps-common", editable = true }
sps-databases = { path = "../sps-databases", editable = true }

[tool.hatch.build.targets.sdist]
exclude = ["tests"]

[tool.hatch.build.targets.wheel]
exclude = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
