[project]
name = "controller"
version = "0.1.3"
description = "CHIME SPS Controller"
requires-python = ">=3.10,<3.12"
readme = "README.md"
dependencies = [
    "beamformer",
    "sps-common",
    "sps-databases",
    "async-exit-stack>=1.0.1,<2",
    "click>=8.1.4,<9",
    "msgpack-python>=0.5.6,<0.6",
    "numpy>=1.24.3,<2",
    "pytz~=2023.3",
    "pyzmq>=24.0.1,<25",
    "setuptools>=65.6.3,<66",
    "trio>=0.22.0,<0.23",
]

[project.scripts]
spsctl = "controller:cli"
spsctl_batched = "controller:cli_batched"
stopacq = "controller:stop_acq"
rpc-client = "controller.rpc_client:main"
sched-known-psrs = "scheduling.scheduleknownpulsars:main"
schedule_rarange = "scheduling.schedule_rarange:main"

[dependency-groups]
dev = [
    "commitizen>=3.4.0,<4",
    "mypy>=1.4.0,<2",
    "pre-commit>=3.3.3,<4",
    "pytest>=7.3.2,<8",
]

[tool.uv]

[tool.uv.sources]
beamformer = { path = "../beamformer", editable = true }
sps-common = { path = "../sps-common", editable = true }
sps-databases = { path = "../sps-databases", editable = true }

[tool.hatch.build.targets.sdist]
exclude = ["tests"]

[tool.hatch.build.targets.wheel]
exclude = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
