[project]
name = "folding"
version = "0.1.1"
description = "Folding SPS candidates and known pulsars"
authors = [{ name = "Robert Main", email = "robert.main@mcgill.ca" }]
requires-python = ">=3.10,<3.12"
readme = "README.md"
dependencies = [
    "astropy>=6.1,<6.2",
    "click>=8.1.4,<9",
    "h5py>=3.9,<3.10",
    "matplotlib>=3.7.1,<4",
    "numpy>=1.24.3,<2",
    "scipy>=1.10.1,<2",
    "beamformer",
    "scheduler",
    "sps-common",
    "sps-databases",
    "numba>=0.58,<0.59",
]

[project.scripts]
fold_candidate = "folding.fold_candidate:main"
confirm_cand = "multiday_search.confirm_cand:main"
multidayfold_pipeline = "multiday_search.multidayfold_pipeline:main"

[dependency-groups]
dev = [
    "commitizen>=3.4.0,<4",
    "mypy>=1.4.0,<2",
    "pre-commit>=3.3.3,<4",
    "pytest>=7.3.2,<8",
]

[tool.uv]

[tool.uv.sources]
beamformer = { path = "../beamformer", editable = true }
scheduler = { path = "../scheduler", editable = true }
sps-common = { path = "../sps-common", editable = true }
sps-databases = { path = "../sps-databases", editable = true }

[tool.hatch.build.targets.sdist]
include = [
    "folding",
    "multiday_search",
    "foldutils",
]

[tool.hatch.build.targets.wheel]
include = [
    "folding",
    "multiday_search",
    "foldutils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
