[tool.poetry]
name = "folding"
version = "0.1.1"
description = "Folding SPS candidates and known pulsars"
authors = ["Robert Main <robert.main@mcgill.ca>"]
readme = "README.md"
packages = [
    { include = "folding" },
    { include = "multiday_search" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
astropy = "~6.1"
click = "^8.1.4"
h5py = "~3.9"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
scipy = "^1.10.1"
beamformer = {path = "../beamformer", develop=true}
scheduler = {path = "../scheduler", develop=true}
sps-common = {path = "../sps-common", develop=true}
sps-databases = {path = "../sps-databases", develop=true}
numba = "^0.58"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.4.0"
mypy = "^1.4.0"
pre-commit = "^3.3.3"
pytest = "^7.3.2"

[tool.poetry.scripts]
fold_candidate = "folding.fold_candidate:main"
fold_pulsar = "folding.fold_pulsar:main"
confirm_cand = "multiday_search.confirm_cand:main"
multidayfold_pipeline = "multiday_search.multidayfold_pipeline:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
