[tool.poetry]
name = "sps-multi-pointing"
version = "0.2.0"
description = "CHIME SPS Multi-Pointing Candidate Processor"
authors = ["CHIME SPS <chime_spawg@physics.mcgill.>"]
license = "MIT"
readme = "README.md"
exclude = [
    "tests"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
sps-common = {path = "../sps-common", develop=true}
sps-databases = {path = "../sps-databases", develop=true}
pulsarsurveyscraper = {git = "https://github.com/dlakaplan/pulsarsurveyscraper.git"}
attrs = "^22.2.0"
click = "^8.1.4"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
omegaconf = "^2.3.0"
pyyaml = "^6.0"
scikit-learn = "^1.3.0"
psrqpy = "^1.2.7"
easydict = "^1.11"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.4.0"
mypy = "^1.4.0"
pre-commit = "^3.3.3"
pytest = "^7.3.2"

[tool.poetry.scripts]
spsmp = "sps_multi_pointing.mp_pipeline:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
