[project]
name = "sps-multi-pointing"
version = "0.2.0"
description = "CHIME SPS Multi-Pointing Candidate Processor"
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = "GPL-3.0-only"
dependencies = [
    "sps-common",
    "sps-databases",
    "pulsarsurveyscraper",
    "attrs>=22.2.0,<23",
    "click>=8.1.4,<9",
    "matplotlib>=3.7.1,<4",
    "numpy>=1.24.3,<2",
    "omegaconf>=2.3.0,<3",
    "pyyaml~=6.0",
    "scikit-learn>=1.3.0,<2",
    "psrqpy>=1.2.7,<2",
    "easydict~=1.11",
]

[project.scripts]
spsmp = "sps_multi_pointing.mp_pipeline:cli"

[dependency-groups]
dev = [
    "commitizen>=3.4.0,<4",
    "mypy>=1.4.0,<2",
    "pre-commit>=3.3.3,<4",
    "pytest>=7.3.2,<8",
]

[tool.uv]

[tool.uv.sources]
sps-common = { path = "../sps-common", editable = true }
sps-databases = { path = "../sps-databases", editable = true }
pulsarsurveyscraper = { git = "https://github.com/dlakaplan/pulsarsurveyscraper.git" }

[tool.hatch.build.targets.sdist]
exclude = ["tests"]

[tool.hatch.build.targets.wheel]
exclude = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
