[tool.poetry]
name = "ps-processes"
version = "0.1.2"
description = "CHIME SPS Power Spectrum Processes"
authors = ["CHIME SPS <chime_spawg@physics.mcgill.>"]
license = "MIT"
readme = "README.md"
exclude = [
    "tests"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
rfi-mitigation = {path = "../rfi-mitigation", develop=true}
sps-common = {path = "../sps-common", develop=true}
sps-databases = {path = "../sps-databases", develop=true}
h5py = "~3.9"
jplephem = "^2.18"
numpy = "^1.24.3"
prometheus-client = "^0.17.1"
pyfftw = "^0.13.1"
scikit-learn = "^1.3.0"
scipy = "^1.10.1"
filelock = "^3.12.4"
colorcet = "^3.0.1"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.4.0"
mypy = "^1.4.0"
pre-commit = "^3.3.3"
pytest = "^7.3.2"

[tool.poetry.scripts]
run_ps_processes = "ps_processes.cli:main"
create_injection_file = "ps_processes.utilities.create_injection_file:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
