[project]
name = "ps-processes"
version = "0.1.2"
description = "CHIME SPS Power Spectrum Processes"
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = "GPL-3.0-only"
dependencies = [
    "rfi-mitigation",
    "sps-common",
    "sps-databases",
    "h5py>=3.9,<3.10",
    "jplephem~=2.18",
    "numpy>=1.24.3,<2",
    "prometheus-client>=0.17.1,<0.18",
    "pyfftw>=0.13.1,<0.14",
    "scikit-learn>=1.3.0,<2",
    "scipy>=1.10.1,<2",
    "filelock>=3.12.4,<4",
    "colorcet>=3.0.1,<4",
]

[project.scripts]
run_ps_processes = "ps_processes.cli:main"
create_injection_file = "ps_processes.utilities.create_injection_file:main"

[dependency-groups]
dev = [
    "commitizen>=3.4.0,<4",
    "mypy>=1.4.0,<2",
    "pre-commit>=3.3.3,<4",
    "pytest>=7.3.2,<8",
]

[tool.uv]

[tool.uv.sources]
rfi-mitigation = { path = "../rfi-mitigation", editable = true }
sps-common = { path = "../sps-common", editable = true }
sps-databases = { path = "../sps-databases", editable = true }

[tool.hatch.build.targets.sdist]
exclude = ["tests"]

[tool.hatch.build.targets.wheel]
exclude = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
