[project]
name = "rfi-mitigation"
version = "0.1.0"
description = "CHIME SPS RFI Mitigation"
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = "GPL-3.0-only"
dependencies = [
    "spshuff",
    "sps-common",
    "astropy>=6.1,<6.2",
    "h5py>=3.9,<3.10",
    "jplephem~=2.18",
    "matplotlib>=3.7.1,<4",
    "numpy>=1.24.3,<2",
    "pyfftw>=0.13.1,<0.14",
    "pyyaml~=6.0",
    "scipy>=1.10.1,<2",
    "tqdm>=4.66.5,<5",
]

[project.scripts]
create-birdie-report = "rfi_mitigation.utilities.create_birdie_report:main"

[dependency-groups]
dev = [
    "commitizen>=3.4.0,<4",
    "mypy>=1.4.0,<2",
    "pre-commit>=3.3.3,<4",
    "pytest>=7.3.2,<8",
]

[tool.uv]

[tool.uv.sources]
spshuff = { path = "../spshuff", editable = true }
sps-common = { path = "../sps-common", editable = true }

[tool.hatch.build.targets.sdist]
exclude = ["tests"]

[tool.hatch.build.targets.wheel]
exclude = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
