[project]
name = "sps-common"
version = "1.1.0"
description = "CHIME SPS Common Code"
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = "GPL-3.0-only"
dependencies = [
    "astropy>=6.1,<6.2",
    "attrs>=22.2.0,<23",
    "h5py>=3.9,<3.10",
    "matplotlib>=3.7.1,<4",
    "pytz~=2023.3",
    "scipy>=1.10.1,<2",
    "threadpoolctl>=3.1.0,<4",
    "click>=8.1.4,<9",
    "easydict~=1.11",
    "numpy>=1.24.3,<2",
    "pyyaml~=6.0",
]

[project.scripts]
plot_candidates = "sps_common.interfaces.single_pointing:plot_candidates"
print_candidates = "sps_common.interfaces.single_pointing:print_candidates"

[dependency-groups]
dev = [
    "commitizen>=3.4.0,<4",
    "mypy>=1.4.0,<2",
    "pre-commit>=3.3.3,<4",
    "pytest>=7.3.2,<8",
]

[tool.hatch.build.targets.sdist]
exclude = ["tests"]

[tool.hatch.build.targets.wheel]
exclude = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
