[project]
name = "sps-databases"
version = "0.1.0"
description = "CHIME SPS Database Layer"
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = "GPL-3.0-only"
dependencies = [
    "sps-common",
    "attrs>=22.2.0,<23",
    "pymongo>=4.4.0,<5",
    "pytz~=2023.3",
]

[dependency-groups]
dev = [
    "commitizen>=3.4.0,<4",
    "mypy>=1.4.0,<2",
    "pre-commit>=3.3.3,<4",
    "pytest>=7.3.2,<8",
]

[tool.uv]

[tool.uv.sources]
sps-common = { path = "../sps-common", editable = true }

[tool.hatch.build.targets.sdist]
exclude = ["tests"]

[tool.hatch.build.targets.wheel]
exclude = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
