[project]
name = "sps-dedispersion"
version = "0.1.0"
description = "CHIME SPS Dedispersion"
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = "GPL-3.0-only"
dependencies = [
    "sps-common",
    "astropy>=6.1,<6.2",
    "attrs~=22.2",
    "numpy>=1.24.3,<2",
    "prometheus-client>=0.17,<0.18",
    "pytz~=2023.3",
    "scipy~=1.10",
    "numba>=0.58,<0.59",
]

[dependency-groups]
dev = [
    "commitizen>=3.4.0,<4",
    "mypy>=1.4.0,<2",
    "pre-commit>=3.3.3,<4",
    "pytest>=7.3.2,<8",
]

[tool.uv]

[tool.uv.sources]
sps-common = { path = "../sps-common", editable = true }

[tool.hatch.build.targets.sdist]
exclude = ["tests"]

[tool.hatch.build.targets.wheel]
exclude = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
