[project]
name = "sps-pipeline"
version = "1.5.2"
description = "CHIME SPS Pipeline"
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = "GPL-3.0-only"
dependencies = [
    "beamformer",
    "candidate-processor",
    "workflow-core",
    "folding",
    "ps-processes",
    "rfi-mitigation",
    "scheduler",
    "sps-common",
    "sps-databases",
    "sps-dedispersion",
    "sps-multi-pointing",
    "astropy>=6.1,<6.2",
    "click>=8.1.4,<9",
    "docker>=6.1.3,<7",
    "omegaconf>=2.3.0,<3",
    "prometheus-client>=0.17.1,<0.18",
    "prometheus-api-client>=0.5.4,<0.6",
    "pytz~=2023.3",
    "pyyaml~=6.0",
    "pyroscope-io>=0.8.5,<0.9",
    "requests<2.32.0",
]

[project.scripts]
run-pipeline = "sps_pipeline.pipeline:main"
pointing-with-data = "sps_pipeline.pipeline:find_pointing_with_data"
run-stack-search-pipeline = "sps_pipeline.pipeline:stack_and_search"
find-all-pipeline-processes = "sps_pipeline.processing:find_all_pipeline_processes"
run-all-pipeline-processes = "sps_pipeline.processing:run_all_pipeline_processes"
find-all-folding-processes = "sps_pipeline.processing:find_all_folding_processes"
run-all-folding-processes = "sps_pipeline.processing:run_all_folding_processes"
start-processing-services = "sps_pipeline.processing:start_processing_services"
start-processing-manager = "sps_pipeline.processing:start_processing_manager"
start-processing-cleanup = "sps_pipeline.processing:start_processing_cleanup"
find-monthly-search-commands = "sps_pipeline.stack_scheduling:find_monthly_search_commands"
execute-monthly-search-commands = "sps_pipeline.stack_scheduling:execute_monthly_search_commands"

[dependency-groups]
dev = [
    "commitizen>=3.4.0,<4",
    "mypy>=1.4.0,<2",
    "pre-commit>=3.3.3,<4",
    "pytest>=7.3.2,<8",
]

[tool.uv]

[tool.uv.sources]
beamformer = { path = "../beamformer", editable = true }
candidate-processor = { path = "../candidate-processor", editable = true }
workflow-core = { git = "https://github.com/CHIMEFRB/workflow.git" }
folding = { path = "../folding", editable = true }
ps-processes = { path = "../ps-processes", editable = true }
rfi-mitigation = { path = "../rfi-mitigation", editable = true }
scheduler = { path = "../scheduler", editable = true }
sps-common = { path = "../sps-common", editable = true }
sps-databases = { path = "../sps-databases", editable = true }
sps-dedispersion = { path = "../sps-dedispersion", editable = true }
sps-multi-pointing = { path = "../multi-pointing", editable = true }

[tool.hatch.build.targets.sdist]
exclude = ["tests"]

[tool.hatch.build.targets.wheel]
exclude = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
